tests/negative/typecheck/addrof-type.orng
fn main() -> Int {
    const X: Type = &4
    0
}